[gd_scene load_steps=4 format=1]

[ext_resource path="res://game/scripts/win.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/light/overlay.png" type="Texture" id=2]
[ext_resource path="res://assets/font/rop.fnt" type="BitmapFont" id=3]

[node name="win" type="Node2D"]

z/z = 5
script/script = ExtResource( 1 )

[node name="overlay" type="Sprite" parent="."]

visibility/opacity = 0.5
transform/pos = Vector2( 368.861, 208.384 )
transform/scale = Vector2( 92, 52 )
texture = ExtResource( 2 )

[node name="panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 264.0
margin/top = 154.0
margin/right = 464.0
margin/bottom = 254.0

[node name="Label" type="Label" parent="panel"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 42.0
margin/right = 80.0
margin/bottom = 61.0
custom_fonts/font = ExtResource( 3 )
text = "score"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 120.0
margin/top = 37.0
margin/right = 160.0
margin/bottom = 56.0
custom_fonts/font = ExtResource( 3 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="panel"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 19.0
margin/right = 144.0
margin/bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "top score"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="top_score" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 116.0
margin/top = 15.0
margin/right = 156.0
margin/bottom = 34.0
custom_fonts/font = ExtResource( 3 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 67.0
margin/right = 187.0
margin/bottom = 92.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "play again"
flat = false

[node name="menu" type="Button" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 394.0
margin/top = -152.0
margin/right = 470.0
margin/bottom = -127.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "menu"
flat = false

[node name="message" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 186.0
margin/top = 77.0
margin/right = 362.0
margin/bottom = 96.0
custom_fonts/font = ExtResource( 3 )
text = "you escaped!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="panel/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="panel/menu" to="." method="_on_menu_pressed"]


